<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container_screen"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/roster_list_background"
  tools:context=".activity.HomeActivity"
  tools:showIn="@layout/roster_list_fragment">

  <include layout="@layout/roster_toolbar" />

  <androidx.constraintlayout.widget.Group
    android:id="@+id/group_day_tabs"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:constraint_referenced_ids="tab_monday,tab_tuesday,tab_wednesday,tab_thursday,tab_friday,tab_saturday,tab_sunday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_monday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/roster_tab_vertical_padding"
    android:paddingBottom="@dimen/roster_tab_vertical_padding"
    android:text="@string/roster_tab_monday"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/tab_tuesday"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_roster"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_tuesday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_tuesday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_monday"
    app:layout_constraintEnd_toStartOf="@+id/tab_wednesday"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_wednesday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_wednesday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_tuesday"
    app:layout_constraintEnd_toStartOf="@id/tab_thursday"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_thursday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_thursday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_wednesday"
    app:layout_constraintEnd_toStartOf="@+id/tab_friday"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_friday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_friday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_thursday"
    app:layout_constraintEnd_toStartOf="@+id/tab_saturday"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_saturday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_saturday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_friday"
    app:layout_constraintEnd_toStartOf="@+id/tab_sunday"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tab_sunday"
    style="@style/RosterTab"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:text="@string/roster_tab_sunday"
    app:layout_constraintBottom_toBottomOf="@+id/tab_monday"
    app:layout_constraintStart_toEndOf="@+id/tab_saturday"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/tab_monday"
    tools:visibility="visible" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list_roster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingTop="20dp"
    android:paddingBottom="?android:attr/actionBarSize"
    app:layout_constraintTop_toBottomOf="@+id/tab_monday" />

  <com.crewly.views.LoadingView
    android:id="@+id/loading_view"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_roster" />

</androidx.constraintlayout.widget.ConstraintLayout>