<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingVertical="@dimen/spacing_x4"
  android:paddingHorizontal="@dimen/spacing_x2">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/container_input_crew_code"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_hint_crew_code"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_crew_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/login_screen_username_input_text_size"
      android:enabled="false"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/container_input_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_x2"
    android:hint="@string/login_hint_password"
    app:layout_constraintTop_toBottomOf="@+id/container_input_crew_code"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:textSize="@dimen/login_screen_username_input_text_size"/>

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/button_refresh_roster"
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/spacing_x2"
    android:paddingHorizontal="@dimen/spacing_x3"
    android:text="@string/roster_list_button_refresh_roster"
    app:layout_constraintTop_toBottomOf="@+id/container_input_password"
    app:layout_constraintEnd_toEndOf="parent"
    style="@style/RoundButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>