<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container_screen"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <include layout="@layout/account_toolbar"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_account">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/roster_list_background"
      android:paddingBottom="80dp">

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/account_horizontal_padding"/>

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/account_horizontal_padding"/>

      <com.crewly.views.CompoundDrawableTextView
        android:id="@+id/text_header_crew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_header_crew"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guide_left"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:drawableStartCompat="@drawable/icon_crew"
        style="@style/AccountHeaderText"/>

      <View
        android:id="@+id/indicator_joined_company"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_header_crew"
        app:layout_constraintBottom_toBottomOf="@+id/text_joined_company_label"
        app:layout_constraintStart_toStartOf="@+id/text_header_crew"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/text_joined_company_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_statelist"
        app:layout_constraintTop_toBottomOf="@+id/text_header_crew"
        app:layout_constraintStart_toEndOf="@+id/indicator_joined_company"
        app:layout_constraintEnd_toStartOf="@+id/barrier_joined_company"
        tools:text="Joined Ryanair on"
        style="@style/AccountLabelText"/>

      <TextView
        android:id="@+id/text_joined_company_date"
        android:layout_width="@dimen/account_right_action_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/account_right_action_min_height"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textColor="@color/text_black_primary"
        android:textSize="@dimen/account_button_text_size"
        app:layout_constraintTop_toBottomOf="@+id/text_header_crew"
        app:layout_constraintEnd_toEndOf="@+id/text_header_crew"
        tools:text="21\nDecember\n2015"/>

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_joined_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="text_joined_company_date,guide_right"/>

      <View
        android:id="@+id/indicator_salary"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/text_salary"
        app:layout_constraintBottom_toBottomOf="@+id/text_salary"
        app:layout_constraintStart_toStartOf="@+id/text_header_crew"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/text_salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_salary_label"
        app:layout_constraintTop_toBottomOf="@+id/indicator_joined_company"
        app:layout_constraintStart_toEndOf="@+id/indicator_salary"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        style="@style/AccountLabelText"/>

      <View
        android:id="@+id/indicator_future_days_pattern"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/text_future_days_pattern"
        app:layout_constraintBottom_toBottomOf="@+id/text_future_days_pattern"
        app:layout_constraintStart_toStartOf="@+id/text_header_crew"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/text_future_days_pattern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_pattern_update"
        app:layout_constraintTop_toBottomOf="@+id/indicator_salary"
        app:layout_constraintStart_toEndOf="@+id/indicator_future_days_pattern"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        style="@style/AccountLabelText"/>

      <com.crewly.views.CompoundDrawableTextView
        android:id="@+id/text_header_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_header_account"
        app:layout_constraintTop_toBottomOf="@+id/text_future_days_pattern"
        app:layout_constraintStart_toEndOf="@+id/guide_left"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:drawableStartCompat="@drawable/icon_account"
        style="@style/AccountHeaderText"/>

      <View
        android:id="@+id/indicator_crewly_privacy"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/button_crewly_privacy"
        app:layout_constraintBottom_toBottomOf="@+id/button_crewly_privacy"
        app:layout_constraintStart_toStartOf="@+id/text_header_account"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/button_crewly_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_crewly_privacy"
        app:layout_constraintTop_toBottomOf="@+id/text_header_account"
        app:layout_constraintStart_toEndOf="@+id/indicator_crewly_privacy"
        app:layout_constraintEnd_toEndOf="@+id/text_header_account"
        style="@style/AccountLabelText"/>

      <View
        android:id="@+id/indicator_delete_data"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/button_delete_data"
        app:layout_constraintBottom_toBottomOf="@+id/button_delete_data"
        app:layout_constraintStart_toStartOf="@+id/text_header_account"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/button_delete_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_delete_data"
        app:layout_constraintTop_toBottomOf="@+id/button_crewly_privacy"
        app:layout_constraintStart_toEndOf="@+id/indicator_delete_data"
        app:layout_constraintEnd_toEndOf="@+id/text_header_account"
        style="@style/AccountLabelText"/>

      <com.crewly.views.CompoundDrawableTextView
        android:id="@+id/text_header_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_header_contact"
        app:layout_constraintStart_toEndOf="@+id/guide_left"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:drawableStartCompat="@drawable/icon_contact"
        app:layout_constraintTop_toBottomOf="@+id/button_delete_data"
        style="@style/AccountHeaderText"/>

      <View
        android:id="@+id/indicator_email"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/button_email"
        app:layout_constraintBottom_toBottomOf="@+id/button_email"
        app:layout_constraintStart_toStartOf="@+id/text_header_contact"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/button_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        app:layout_constraintTop_toBottomOf="@+id/text_header_contact"
        app:layout_constraintStart_toEndOf="@+id/indicator_email"
        app:layout_constraintEnd_toEndOf="@+id/text_header_contact"
        style="@style/AccountLabelText"/>

      <View
        android:id="@+id/indicator_facebook"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/button_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/button_facebook"
        app:layout_constraintStart_toStartOf="@+id/text_header_contact"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/button_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_facebook"
        app:layout_constraintTop_toBottomOf="@+id/button_email"
        app:layout_constraintStart_toEndOf="@+id/indicator_facebook"
        app:layout_constraintEnd_toEndOf="@+id/text_header_contact"
        style="@style/AccountLabelText"/>

      <com.crewly.views.CompoundDrawableTextView
        android:id="@+id/text_header_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_header_app"
        app:layout_constraintTop_toBottomOf="@+id/button_facebook"
        app:layout_constraintStart_toEndOf="@+id/guide_left"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:drawableStartCompat="@drawable/icon_android"
        style="@style/AccountHeaderText"/>

      <View
        android:id="@+id/indicator_app_version"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/text_app_version_label"
        app:layout_constraintBottom_toBottomOf="@+id/text_app_version_label"
        app:layout_constraintStart_toStartOf="@+id/text_header_app"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/text_app_version_label"
        android:layout_width="0dp"
        android:layout_height="@dimen/account_button_min_height"
        android:text="@string/account_app_version_label"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@+id/text_header_app"
        app:layout_constraintStart_toEndOf="@+id/indicator_app_version"
        app:layout_constraintEnd_toStartOf="@+id/text_app_version"
        style="@style/AccountLabelText"/>

      <TextView
        android:id="@+id/text_app_version"
        android:layout_width="@dimen/account_right_action_width"
        android:layout_height="@dimen/account_button_min_height"
        android:gravity="center"
        android:textColor="@color/text_black_primary"
        android:textSize="@dimen/account_right_action_text_size"
        app:layout_constraintTop_toBottomOf="@+id/text_header_app"
        app:layout_constraintEnd_toEndOf="@+id/text_header_app"
        tools:text="1.0.0"/>

      <View
        android:id="@+id/indicator_rate_app"
        android:layout_height="0dp"
        android:background="@color/account_header_background"
        app:layout_constraintTop_toTopOf="@+id/button_rate_app"
        app:layout_constraintBottom_toBottomOf="@+id/button_rate_app"
        app:layout_constraintStart_toStartOf="@+id/text_header_app"
        style="@style/AccountVerticalIndicator"/>

      <TextView
        android:id="@+id/button_rate_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_rate_app"
        app:layout_constraintTop_toBottomOf="@+id/text_app_version_label"
        app:layout_constraintStart_toEndOf="@+id/indicator_rate_app"
        app:layout_constraintEnd_toEndOf="@+id/text_header_app"
        style="@style/AccountLabelText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <com.crewly.views.LoadingView
    android:id="@+id/loading_view"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_account"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>